--- a/src/css/font.css
+++ b/src/css/font.css
@@ -1,43 +1,26 @@
 @font-face {
-  font-family: 'icomoon';
-  src: url('../fonts/icomoon.eot?s0moe8');
-  src: url('../fonts/icomoon.eot?s0moe8#iefix') format('embedded-opentype'),
-    url('../fonts/icomoon.ttf?s0moe8') format('truetype'),
-    url('../fonts/icomoon.woff?s0moe8') format('woff'),
-    url('../fonts/icomoon.svg?s0moe8#icomoon') format('svg');
-  font-weight: normal;
+  font-family: 'Museo Sans 300 Light';
+  src: url('MuseoSansCyrl-300.eot');
+  src: url('MuseoSansCyrl-300.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/MuseoSansCyrl-300.woff') format('woff');
+  font-weight: 300;
   font-style: normal;
-  font-display: block;
 }
 
-[class^="icon-"],
-[class*=" icon-"] {
-  /* use !important to prevent issues with browser extensions that change fonts */
-  font-family: 'icomoon' !important;
-  /* speak: never; */
+@font-face {
+  font-family: 'Museo Sans 500 Medium';
+  src: url('MuseoSansCyrl-500.eot');
+  src: url('MuseoSansCyrl-500.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/MuseoSansCyrl-500.woff') format('woff');
+  font-weight: 500;
   font-style: normal;
-  font-weight: normal;
-  font-variant: normal;
-  text-transform: none;
-  line-height: 1;
-
-  /* Better Font Rendering =========== */
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-.icon-facebook:before {
-  content: "\ea90";
-}
-
-.icon-instagram:before {
-  content: "\ea92";
-}
-
-.icon-twitter:before {
-  content: "\ea96";
-}
-
-.icon-linkedin:before {
-  content: "\eac9";
+@font-face {
+  font-family: 'Museo Sans 700 Bold';
+  src: url('MuseoSansCyrl-700.eot');
+  src: url('MuseoSansCyrl-700.eot?#iefix') format('embedded-opentype'),
+    url('../fonts/MuseoSansCyrl-700.woff') format('woff');
+  font-weight: 700;
+  font-style: normal;
 }
