--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,3 +1,14 @@
-*{
-  font-family: 'Museo Sans Curl' sans-serif;
+@import 'base/variables';
+
+* {
+  font-family: 'Museo Sans Curl'sans-serif;
 }
+
+.container {
+  max-width: 950px;
+  margin: 0 auto;
+}
+
+@import 'blocks/promo';
+@import 'blocks/header';
+@import 'blocks/buttons';
