--- a/src/sass/blocks/_header.scss
+++ b/src/sass/blocks/_header.scss
@@ -2,22 +2,31 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  &__logo-container{
+
+  &__logo-container {
     width: 251px;
-    img{
+
+    img {
       width: 100%;
     }
   }
+
+  &__logo_mobile {
+    display: none;
+  }
+
   &__official {
     font-size: 12px;
     font-weight: 500;
     text-align: center;
     color: #fff;
+
     span {
       display: block;
       font-size: 18px;
     }
   }
+
   &__phone {
     display: block;
     font-size: 18px;
@@ -25,11 +34,13 @@
     text-align: right;
     text-decoration: none;
     color: #fff;
+
     &:hover {
       color: #fff;
       text-decoration: none;
     }
   }
+
   &__contacts {
     display: flex;
     flex-direction: column;
