--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -1,4 +1,5 @@
 @import 'base/variables';
+@import 'base/mixins';
 
 * {
   font-family: 'Museo Sans Curl'sans-serif;
@@ -12,3 +13,7 @@
 @import 'blocks/promo';
 @import 'blocks/header';
 @import 'blocks/buttons';
+@import 'blocks/advantages';
+@import 'blocks/titles';
+
+@import 'base/media';
