--- a/src/sass/blocks/_titles.scss
+++ b/src/sass/blocks/_titles.scss
@@ -3,4 +3,12 @@
   font-weight: 700;
   text-align: center;
   color: #0d0d0d;
+  text-transform: uppercase;
+
+  &_left {
+    max-width: 800px;
+    text-align: left;
+    font-size: 36px;
+    color: #fff;
+  }
 }
