--- a/src/sass/style.scss
+++ b/src/sass/style.scss
@@ -18,4 +18,6 @@
 @import 'blocks/consultation';
 @import 'blocks/forms';
 @import 'blocks/carousel';
+@import 'blocks/catalog';
+
 @import 'base/media';
